--- a/composer.json
+++ b/composer.json
@@ -10,6 +10,7 @@
         "doctrine/dbal": "^2.6",
         "encore/laravel-admin": "1.5.*",
         "fideloper/proxy": "~3.3",
+        "johnlui/aliyun-oss": "~2.0",
         "laravel/framework": "5.5.*",
         "laravel/tinker": "~1.0",
         "yuanchao/laravel-5-markdown-editor": "dev-master"
