--- a/composer.json
+++ b/composer.json
@@ -7,6 +7,7 @@
     "require": {
         "php": ">=7.0.0",
         "barryvdh/laravel-ide-helper": "^2.4",
+        "caouecs/laravel-lang": "~3.0",
         "doctrine/dbal": "^2.6",
         "encore/laravel-admin": "1.5.*",
         "fideloper/proxy": "~3.3",
