--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "dependencies": {
         "element-ui": "^2.0.11",
         "less-loader": "^4.1.0",
+        "npm": "^6.1.0",
         "vue-router": "^3.0.1",
         "vux": "^2.8.0",
         "vux-loader": "^1.2.1"
