--- a/composer.json
+++ b/composer.json
@@ -14,9 +14,11 @@
         "johnlui/aliyun-oss": "~2.0",
         "laravel/framework": "5.5.*",
         "laravel/tinker": "~1.0",
+        "overtrue/laravel-wechat": "~4.0",
         "yuanchao/laravel-5-markdown-editor": "dev-master"
     },
     "require-dev": {
+        "barryvdh/laravel-debugbar": "^3.1",
         "filp/whoops": "~2.0",
         "fzaninotto/faker": "~1.4",
         "mockery/mockery": "~1.0",
