--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
         "vue": "^2.1.10"
     },
     "dependencies": {
+        "bootstrap": "^4.1.3",
         "element-ui": "^2.0.11",
         "less-loader": "^4.1.0",
         "npm": "^6.1.0",
