更改.env样例参数

--- a/.env.example
+++ b/.env.example
@@ -32,3 +32,16 @@ MAIL_ENCRYPTION=null
 PUSHER_APP_ID=
 PUSHER_APP_KEY=
 PUSHER_APP_SECRET=
+
+WECHAT_LOG_LEVEL=debug
+WECHAT_LOG_FILE=/log/storage/logs/wechat.log
+
+WECHAT_OFFICIAL_ACCOUNT_APPID=xxx
+WECHAT_OFFICIAL_ACCOUNT_SECRET=xxx
+WECHAT_OFFICIAL_ACCOUNT_TOKEN=xxx
+WECHAT_OFFICIAL_ACCOUNT_AES_KEY=xxx
+
+WECHAT_OFFICIAL_FAKE_ACCOUNT_APPID=xxx
+WECHAT_OFFICIAL_FAKE_ACCOUNT_SECRET=xxx
+WECHAT_OFFICIAL_FAKE_ACCOUNT_TOKEN=xxx
+WECHAT_OFFICIAL_FAKE_ACCOUNT_AES_KEY=xxx
